# diplom_Bogomolov1

./: .gitgnore  .gitignore  pyproject.toml  req.txt
diplom/: db.sqlite3
diplom/diplom/: settings.py  urls.py
diplom/main/: admin.py  forms.py  models.py  urls.py  views.py
diplom/main/migrations/: 0001_initial.py  0002_alter_course_logo.py  0003_participationapplication.py  0004_alter_participationapplication_course.py  0005_alter_course_users.py  0006_reiting.py  0007_alter_reiting_options_and_more.py
diplom/main/static/assets/default/js/: script.js
diplom/main/static/css/: home.css  style.css
diplom/main/templates/main/: about.html  about_us.html  application_form.html  contacts.html  cources.html  course1.html  course2.html  course3.html  forma.html  index.html  layout.html  module11.html  module12.html  module13.html  module14.html  modules.html  modules2.html  prices.html  profile-courses.html  profile.html  reiting.html  zapisi.html
diplom/users/: forms.py  models.py  urls.py  views.py
diplom/users/migrations/: 0001_initial.py  0002_profile_second_name.py
diplom/users/templates/users/: courses.html  edit_user_profile.html  login.html  logout.html  profile_detail.html  register.html
