[tool.poetry]
name = "diplom-bogomolov1"
version = "0.1.0"
description = ""
authors = ["Danil Galeev <galoffdan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
cffi = "^1.16.0"
cryptography = "^42.0.7"
django = "^5.0.6"
django-crispy-forms = "^2.1"
pillow = "^10.3.0"
pycparser = "^2.22"
sqlparse = "^0.5.0"
tzdata = "^2024.1"
django-phonenumber-field = "^7.3.0"
phonenumbers = "^8.13.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
